Add Bandage reference

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                     </section>
                     <section>
                         <h3>Bioinformatics reality</h3>
-                        <img data-src="img/assembly_graph.png" height="550" width="1240"></img>
+                        <img data-src="img/assembly_graph.png" height="545" width="1240"></img>
+                        <small>https://github.com/rrwick/Bandage</small>
                     </section>
                 </section>
 
