--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
-				progress: false,
+				controls: false,
+				progress: true,
 				history: true,
 				center: true,
 				slideNumber: true,
