Improve last results slide

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 </tr>
                             </tbody>
                         </table><br>
-                        <small>*311 missed 16S rRNA may be due to introns in some 16S or simply misassemblies.</small>
+                        <small>*311 missed 16S rRNA may be due complex graph structures or simply misassemblies.</small>
                     </section>
                 </section>
                 <section>
