--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 <section>
                     <h3>The plan</h3>   
                     <ul>
-                        <li>Collect statistics about 16S rRNA genes assembly on isolates datasets</li>
-                        <li>Compare 16S rRNA genes assembled by SPAdes in metagenomic assembly with other methods (if any) </li>
-                        <li>Come up with a way to annotate 16S rRNA genes using information from the assembly graph</li>
+                        <li>Collect statistics about 16S rRNA genes assembly on isolates datasets;</li>
+                        <li>Compare 16S rRNA genes assembled by SPAdes in metagenomic assembly with other methods (if any);</li>
+                        <li>Come up with a way to annotate 16S rRNA genes using information from the assembly graph.</li>
                     </ul>
                 </section>
 
