--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                     </section>
                 </section>
 
-                <section>
+                <section id="fragments">
                     <h3>The plan</h3>   
                     <ul>
-                        <li>Collect statistics about 16S rRNA genes assembly on isolates datasets;</li>
-                        <li>Compare 16S rRNA genes assembled by SPAdes in metagenomic assembly with other methods (if any);</li>
-                        <li>Come up with a way to annotate 16S rRNA genes using information from the assembly graph.</li>
+                        <li class="fragment">Collect statistics about 16S rRNA genes assembly on isolates and metagenomic datasets;</li>
+                        <li class="fragment">Compare 16S rRNA genes assembled by SPAdes in metagenomic assembly with other methods (if any);</li>
+                        <li class="fragment">Come up with a way to annotate 16S rRNA genes using information from the assembly graph.</li>
                     </ul>
                 </section>
 
