--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h3>The plan</h3>   
                     <ul>
                         <li class="fragment">Collect statistics about 16S rRNA genes assembly on isolates and metagenomic datasets;</li>
-                        <li class="fragment">Compare 16S rRNA genes assembled by SPAdes in metagenomic assembly with other methods (if any);</li>
+                        <li class="fragment">Compare 16S rRNA genes assembled by SPAdes with other methods (if any);</li>
                         <li class="fragment">Come up with a way to annotate 16S rRNA genes using information from the assembly graph.</li>
                     </ul>
                 </section>
