--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </section>
 
                 <section id="fragments">
-                    <h3>The plan</h3>   
+                    <h3>The plan</h3><br>   
                     <ul>
                         <li class="fragment">Collect statistics about 16S rRNA genes assembly on isolates and metagenomic datasets;</li>
                         <li class="fragment">Compare 16S rRNA genes assembled by SPAdes with other methods (if any);</li>
