--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h3>Metagenomic assembly and annotation of 16S ribosomal RNA genes by SPAdes</h3>
                     <p>
 						<h7>Created by <a href="https:/ru.linkedin.com/pub/peter-leontev/63/348/67b">Peter Leontev</a></small><br>
-                        Scientific advisor: <br>Sergey Nurk, Algorithmic biology lab</h7>
+                        Scientific advisor: <br>Sergey Nurk, Centre For Algorithmic Biotechnology SPbSU</h7>
 					</p>
 				</section>
 
