--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<section>
                     <section>
 					    <h3>Correspondence between 16S rRNA in genome and in assembly graph</h3>
-				        <img data-src="img/correspondence.png" width="1000" height="500"</img>
+				        <img data-src="img/correspondence.jpg" width="1000" height="500"</img>
                     </section>
                     <section>
                         <h3>Bioinformatics reality</h3>
