--- a/index.html
+++ b/index.html
@@ -17,18 +17,6 @@
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
 
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
@@ -40,22 +28,14 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
+ 				<section data-background="img/16S.png" data-background-size="390px" data-state="img-right">
 					<h3>Metagenomic assembly and annotation of 16S ribosomal RNA genes by SPAdes</h3>
                     <p>
 						<h7>Created by <a href="https:/ru.linkedin.com/pub/peter-leontev/63/348/67b">Peter Leontev</a></small><br>
-                        Scientific advisor: <br>Sergey Nurk, Centre For Algorithmic Biotechnology SPbSU</h7>
+                        Scientific advisor: <br>Sergey Nurk, Center For Algorithmic Biotechnology SPbSU</h7>
 					</p>
 				</section>
 
-				<section>
-					<h3>The problem</h3>   
-					<p>
-						To achieve both better assembly and annotation of 16S rRNA genes 
-					</p>
-				</section>
-
-                <!-- Example of nested vertical slides -->
                 <section>
                     <section>
                         <h3>Why?</h3>
@@ -77,54 +57,79 @@
                     </section>
                 </section>
 
-                <section id="fragments">
-                    <h3>The plan</h3><br>   
+                <section align="left">
+                    <h3>Analysis of 16S rRNA genes</h3>
                     <ul>
-                        <li class="fragment">Collect statistics about 16S rRNA genes assembly on isolates and metagenomic datasets;</li>
-                        <li class="fragment">Compare 16S rRNA genes assembled by SPAdes with other methods (if any);</li>
-                        <li class="fragment">Come up with a way to annotate 16S rRNA genes using information from the assembly graph.</li>
+                        <li>Target sequencing;</li>
+                        <li>Whole metagenomic sequencing.</li>
                     </ul>
                 </section>
 
-				<section>
-                    <section id="fragments">
-                        <h3>How to detect 16S rRNA?</h3><br>
-                        <ul>
-                            <li class="fragment">Easy: align known 16S rRNA from existing DBs to assembled contigs;</li>
-                            <li class="fragment"><strong>Much better</strong>: use discriminative model (like HMM) including both 1° and 2° structures.</li>
-                        </ul>
-                    </section>
-                    <section>
-    					<h3>SPAdes 16S rRNA assembly statistics</h3>
-    					<table>
-                            <thead>
-                                <tr>
-                                    <th>Organism</th>
-                                    <th>16S rRNA copies in genome</th>
-                                    <th>Assembled</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td align="center">Some bacteria</td>
-                                    <td align="center">2-15</td>
-                                    <td align="center">1+*</td>
-                                </tr>
-                            </tbody>
-                        </table><br>	
-                        <small>
-                            *This number depends on available sequencing information (mate-pair, PacBio reads, etc.)   
-                        </small>			
-                    </section>                    
+				<section id="fragments">
+					<h3>The problem</h3>   
+                    <ul>
+				        <br><li class="fragment">Detection of unusual biology across Bacterial groups;</li>
+                        <li class="fragment">We cannot use target assembly but we still need full length 16S rRNA genes;</li>
+                        <li class="fragment">We also extremely need a genome information about an unusual group. What are we supposed to do?</li>
+                        <br>
+                        <img width="100" height="100" data-src="img/Ivanova.jpg"</img>
+                        <small class="fragment"> Source of the problem: Joint Genomic Institute, Natalia Ivanova group</small>
+                        
+                    </ul>
+				</section>
+
+                <section id="fragments">
+                    <h3>The plan</h3><br>   
+                    <ul>
+                        <li class="fragment">Contigs binning according to 16S rRNA via SPAdes assembly graph;</li>
+                        <li class="fragment">Comparison of MetaSPAdes de novo and custom JGI pipeline assemblies</li>
+                    </ul>
                 </section>
 
                 <section>
-                    <h3>Comparison of 16S rRNA from targeted assembly and from SPAdes contigs</h3><br>
+                    <section>
+                        <h3>Correspondence between 16S rRNA in the genome and in the assembly graph</h3>
+                        <img data-src="img/correspondence.jpg" width="1000" height="500"</img>
+                    </section>
+                    <section>   
+                        <h3>Bioinformatics reality</h3>
+                        <img data-src="img/assembly_graph.png" height="545" width="1240"></img>
+                        <small>https://github.com/rrwick/Bandage</small>
+                    </section>
+                </section>
+
+                <section>
+                    <h3>SPAdes 16S rRNA on isolates</h3>
                     <table>
                         <thead>
                             <tr>
-                                <th align="center">Expected number of 16S rRNA</th>
-                                <th align="center">Found in contigs</th>
+                                <th>Organism</th>
+                                <th>16S rRNA copies in genome</th>
+                                <th>Assembled</th>
+                                <th>Long contigs found/expected</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td align="center">Some bacteria</td>
+                                <td align="center">2-15</td>
+                                <td align="center">1+*</td>
+                                <td align="center">~80%</td>
+                            </tr>
+                        </tbody>
+                    </table><br>    
+                    <small>
+                        *This number depends on available sequencing information (mate-pair, PacBio reads, etc.)   
+                    </small>            
+                </section>
+
+                <section>
+                    <h3>Comparison of 16S rRNA from JGI pipeline and from MetaSPAdes</h3><br>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th align="center">JGI</th>
+                                <th align="center">SPAdes</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -134,56 +139,38 @@
                             </tr>
                         </tbody>
                     </table><br>
-                    <small>*311 missed 16S rRNA may be due to complex graph structures or simply misassemblies.</small>
+                    <small>*~1/5 missed 16S rRNA may be due to complex graph structures or simply misassemblies.</small>
                 </section>
 
-				<section>
+                <section> 
                     <section>
-					    <h3>Correspondence between 16S rRNA in genome and in assembly graph</h3>
-				        <img data-src="img/correspondence.jpg" width="1000" height="500"</img>
+                        <h2>Future work</h2>
                     </section>
                     <section>
-                        <h3>Bioinformatics reality</h3>
-                        <img data-src="img/assembly_graph.png" height="545" width="1240"></img>
-                        <small>https://github.com/rrwick/Bandage</small>
+                        <h3>General 16S rRNA problem</h3>
+                        <img width="1050" height="520" data-src="img/msa_by_evol_distance.png"</img>
+                        <small>The same: 1-3 - order, 3-11 - class, 12 - phylum</small>
+                    </section>
+                    <section>
+                        <h3>16S rRNA diversity</h3>
+                        <img height="350" data-src="img/conserved_regions.jpg"</img>
+                        <small>Sequence diversity among the 16S rRNA genes in a genome was found in 235 species (from 0.06% to 20.38%; 0.55% ± 1.46%)</small>
+                    </section>
+                    <section>
+                        <h3>How to improve de novo assembly?</h3>
+                        <br><ul>
+                            <li>Use information about 16S rRNA both primary and secondary structures (Reago);</li>
+                            <li>Use existing DBs of RNA families (Rfam, Greengenes).</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Long-term goal</h3>
+                        Imrove MetaSPAdes de novo assembly using listed ideas.
                     </section>
                 </section>
 
                 <section>
-                    <h3>Source of problems</h3>
-                    <img height="500" width="950" data-src="img/msa_by_evol_distance.png"</img>
-                    <small>
-                        The same <br>1-3: order, 4-11: class, 12: phylum
-                    </small>
-                </section>
-
-				<section>
-                    <section>
-                        <h2>Annotation results</h2>
-                    </section>
-                    <section>
-					   <h3>Simulated dataset metagenomic assembly </h3><br>
-    				    <table>
-                            <thead>
-                                <tr>
-                                    <th align="center">Number of bacteria</th>
-                                    <th align="center">16S rRNA expected/found</th>
-                                    <th align="center">Long contigs expected/found</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td align="center">45</td>
-                                    <td align="center">45/39</td>
-                                    <td align="center">320/118</td>
-                                </tr>
-                            </tbody>
-                        </table>
-				    </section>
-                </section>
-
-                <section>
-                    <h2>THANK YOU!<h3>
+                    <h2>THANK YOU!<h2>
                 </section>
 			</div>
 		</div>
@@ -203,6 +190,8 @@
 				slideNumber: true,
 				hideAddressBar: true,
 
+                
+
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 				// Optional reveal.js plugins
@@ -215,6 +204,13 @@
 					{ src: 'plugin/notes/notes.js', async: true }
 				]
 			});
+
+            Reveal.configure({
+                keyboard: {
+                    39: 'next',
+                    37: 'prev'
+                }
+            });
 
 			window.addEventListener("mousedown", handleClick, false);
 			window.addEventListener("contextmenu", function(e) { e.preventDefault(); }, false);
