--- a/index.html
+++ b/index.html
@@ -70,12 +70,9 @@
                     <ul>
 				        <br><li class="fragment">Detection of unusual biology across Bacterial groups;</li>
                         <li class="fragment">We cannot use target assembly but we still need full length 16S rRNA genes;</li>
-                        <li class="fragment">We also extremely need a genome information about an unusual group. What are we supposed to do?</li>
-                        <br>
-                        <img width="100" height="100" data-src="img/Ivanova.jpg"</img>
-                        <small class="fragment"> Source of the problem: Joint Genomic Institute, Natalia Ivanova group</small>
-                        
+                        <li class="fragment">We also extremely need a genome information about an unusual group. What are we supposed to do?</li>                       
                     </ul>
+                    <br><br><small class="fragment">Source: Joint Genomic Institute, Natalia Ivanova group</small>
 				</section>
 
                 <section id="fragments">
