--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<section id="fragments">
 					<h3>The problem</h3>   
                     <ul>
-				        <br><li class="fragment">Detection of unusual biology across Bacterial groups;</li>
+				        <br><li class="fragment">We want to detect an unusual biology across Bacterial groups;</li>
                         <li class="fragment">We cannot use target assembly but we still need full length 16S rRNA genes;</li>
                         <li class="fragment">We also extremely need a genome information about an unusual group. What are we supposed to do?</li>                       
                     </ul>
