--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3>The plan</h3><br>   
                     <ul>
                         <li class="fragment">Contigs binning according to 16S rRNA via SPAdes assembly graph;</li>
-                        <li class="fragment">Comparison of MetaSPAdes de novo and custom JGI pipeline assemblies</li>
+                        <li class="fragment">Comparison of MetaSPAdes de novo and custom JGI pipeline assemblies.</li>
                     </ul>
                 </section>
 
