--- a/index.html
+++ b/index.html
@@ -22,8 +22,24 @@
 		<![endif]-->
 	</head>
 
-	<body>
+	<style>
+		figure {
+			display: block; /* Блочный элемент */
+			width: 480px; /* Ширина */
+			height: 550px; /* Высота */
+			float: left; /* Блоки выстраиваются по горизонтали */
+			margin: 0 3px 3px 0; /* Отступы */
+			text-align: center; /* Выравнивание по центру */
+		}
+		figure img {
+			border: 2px solid #8b8e4b; /* Параметры рамки */
+		}
+		figure p {
+			margin-bottom: 0; /* Отступ снизу */
+		}
+	</style>
 
+	<body>
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
@@ -37,48 +53,106 @@
 				</section>
 
                 <section>
-                    <section>
-                        <h3>Why?</h3>
-                        <p>16S rRNA genes are very important in molecular phylogeny due to slow evolution rates of their regions</p>
-                    </section>
-                    <section>
-                        <h3>One great example [deprecated]</h3>
-                        <a> 
-                            <img height="450" data-src="img/woese_tree_of_life_16s.png"</img>
-                        </a>
-                        <p>Woese et al. (1990)</p>
-                    </section>
-                    <section>
-                        <h3>Contemporary view</h3>
-                        <a>
-                            <img width="600" height="450" data-src="img/tree_of_life_new.jpg"</img>
-                        </a>
-                        <p>Christopher et al. (2015)</p>
-                    </section>
+                    <h3>Why 16S rRNA genes are useful?</h3>
+                    <p>16S rRNA genes are very important in reconstructing phylogenies due to slow evolution rates of their regions</p>
+                    <figure>
+                        <img height="400" data-src="img/woese_tree_of_life_16s.png"</img>
+                        <figcaption><small>Woese et al. (1990)</small></figcaption>
+                    </figure>
+                    <figure>
+                        <img height="400" data-src="img/tree_of_life_new.jpg"</img>
+                        <figcaption><small>Christopher et al. (2015)</small></figcaption>
+                    </figure>      
                 </section>
 
                 <section align="left">
-                    <h3>Analysis of 16S rRNA genes</h3>
+                    <h3>16S rRNA genes sequencing</h3>
                     <ul>
-                        <li>Target sequencing;</li>
-                        <li>Whole metagenomic sequencing.</li>
-                    </ul>
+                        <li><i>Target approach</i> allows to selectively capture genomic regions of interest from DNA sample;</li>
+                        <li><i>Whole metagenome approach</i> provides sequencing information about the whole sample.</li>
+                    </ul>   
                 </section>
 
-				<section id="fragments">
-					<h3>The problem</h3>   
-                    <ul>
-				        <br><li class="fragment">We want to detect an unusual biology across Bacterial groups;</li>
-                        <li class="fragment">We cannot use target assembly but we still need full length 16S rRNA genes;</li>
-                        <li class="fragment">We also extremely need a genome information about an unusual group. What are we supposed to do?</li>                       
+                <section> 
+                    <section>
+                        <h3>Direction I. The problem</h3>
+                        <p>Assembly of full-length 16S rRNA genes via MetaSPAdes</p> 
+                    </section>
+
+                    <section>
+                        <h3>Idea</h3>
+                        <p>When 16S rRNA in a contig then one can easily <i>detect</i> it using the following tools:</p>
+                        <ul id="fragments">
+                            <li class="fragment">Barrnap (based on <i>NHMMER</i>) makes use of the primary structure conservation;</li>
+                            <li class="fragment">Infernal (based on <i>Covariance Models</i>) takes into account both primary and secondary structures.</li>
+                        </ul>
+                    </section>
+
+                    <section>
+	                    <h3>Assembly of 16S rRNA genes on isolates</h3>
+	                    <table>
+	                        <thead>
+	                            <tr>
+	                                <th>16S rRNA copies in a Bacterial genome</th>
+	                                <th>Assembled by SPAdes</th>
+	                            </tr>
+	                        </thead>
+	                        <tbody>
+	                            <tr>
+	                                <td align="center">2-15</td>
+	                                <td align="center">1+*</td>
+	                            </tr>
+	                        </tbody>
+	                    </table>
+	                    <br>    
+	                    <p>
+	                        *This number depends on available sequencing information (mate-pair, PacBio reads, etc.)   
+	                    </p>            
+                	</section>
+
+                    <section>
+                        <h3>Local similarity of 16S rRNA genes</h3>
+                        <figure>
+	                        <img height="500" data-src="img/msa_by_evol_distance.png"</img>
+	                        <figcaption><small>Multiple alignments were built for 16S rRNA sequences for organisms from the same order(1-3), class (4-11), phylum (12)</small></figcaption>
+	                    </figure> 
+	                    <figure>
+	                        <img height="500" data-src="img/conserved_regions.jpg"</img>
+	                        <figcaption><small>Sequence diversity among the 16S rRNA genes in a genome was found in 235 species<br>
+                            (from 0.06% to 20.38%; 0.55% ± 1.46%)</small></figcaption>
+	                    </figure> 
+	                </section>
+
+                    <section>
+                        <h3>Ideas about how to improve de novo assembly</h3>
+                        <br><ul>
+                            <li>Use information about both 16S rRNA primary and secondary structures (Reago);</li>
+                            <li>Use existing DBs of RNA families (Rfam, Greengenes) to add an information to assembly graph.</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h3>Task</h3>
+                        <p>Implement these ideas in MetaSPAdes.</p>
+                    </section>
+
+                </section>
+
+				<section>
+					<h3>Direction II. The problem</h3>   
+                    <ul id="fragments">
+				        <br>
+				        <li class="fragment">Source: Natalia Ivanova group from Joint Genomic Institute which studies very specific metagenomic datasets;</li>
+				        <li class="fragment">Detection of unusual biology across different domains;</li>
+                        <li class="fragment">Target sequencing lacks specificity but there is a need to get full-length 16S rRNA genes;</li>
+                        <li class="fragment">Additional challenge: necessity to get a genome information about the corresponding unusual group.</li>            
                     </ul>
-                    <br><br><small class="fragment">Source: Joint Genomic Institute, Natalia Ivanova group</small>
 				</section>
 
-                <section id="fragments">
-                    <h3>The plan</h3><br>   
-                    <ul>
-                        <li class="fragment">Contigs binning according to 16S rRNA via SPAdes assembly graph;</li>
+                <section>
+                    <h3>Tasks</h3><br>   
+                    <ul id="fragments"> 
+                        <li class="fragment">Contigs binning to 16S rRNA via SPAdes assembly graph;</li>
                         <li class="fragment">Comparison of MetaSPAdes de novo and custom JGI pipeline assemblies.</li>
                     </ul>
                 </section>
@@ -101,69 +175,37 @@
                         <thead>
                             <tr>
                                 <th>Organism</th>
-                                <th>16S rRNA copies in genome</th>
-                                <th>Assembled</th>
-                                <th>Long contigs found/expected</th>
+                                <th>Long contigs* found</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td align="center">Some bacteria</td>
-                                <td align="center">2-15</td>
-                                <td align="center">1+*</td>
                                 <td align="center">~80%</td>
                             </tr>
                         </tbody>
-                    </table><br>    
-                    <small>
-                        *This number depends on available sequencing information (mate-pair, PacBio reads, etc.)   
-                    </small>            
+                    </table>
+                    <small>Aka corresponding information about an unusual group</small>
                 </section>
 
                 <section>
-                    <h3>Comparison of 16S rRNA from JGI pipeline and from MetaSPAdes</h3><br>
+                    <h3>Quantitative comparison of assembled 16S rRNA</h3><br>
                     <table>
                         <thead>
                             <tr>
-                                <th align="center">JGI</th>
-                                <th align="center">SPAdes</th>
+                                <th align="center">JGI custom pipeline</td>
+                                <th align="center">MetaSPAdes</td>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody>                            
                             <tr>
                                 <td align="center">1679</td>
                                 <td align="center">1368</td>
                             </tr>
                         </tbody>
-                    </table><br>
-                    <small>*~1/5 missed 16S rRNA may be due to complex graph structures or simply misassemblies.</small>
-                </section>
-
-                <section> 
-                    <section>
-                        <h2>Future work</h2>
-                    </section>
-                    <section>
-                        <h3>General 16S rRNA problem</h3>
-                        <img width="1050" height="520" data-src="img/msa_by_evol_distance.png"</img>
-                        <small>The same: 1-3 - order, 4-11 - class, 12 - phylum</small>
-                    </section>
-                    <section>
-                        <h3>16S rRNA diversity</h3>
-                        <img height="350" data-src="img/conserved_regions.jpg"</img>
-                        <small>Sequence diversity among the 16S rRNA genes in a genome was found in 235 species (from 0.06% to 20.38%; 0.55% ± 1.46%)</small>
-                    </section>
-                    <section>
-                        <h3>How to improve de novo assembly?</h3>
-                        <br><ul>
-                            <li>Use information about 16S rRNA both primary and secondary structures (Reago);</li>
-                            <li>Use existing DBs of RNA families (Rfam, Greengenes).</li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h3>Long-term goal</h3>
-                        Imrove MetaSPAdes de novo assembly using listed ideas.
-                    </section>
+                    </table>
+                    <br>
+                    <small>*1/5 missed 16S rRNA sequences have length less than 100 bp. This may happen due to complex graph structures or simply misassemblies.</small>
                 </section>
 
                 <section>
