--- a/index.html
+++ b/index.html
@@ -185,16 +185,17 @@
                             </tr>
                         </tbody>
                     </table>
-                    <small>Aka corresponding information about an unusual group</small>
+                    <br>
+                    <small>*Aka corresponding information about an unusual group</small>
                 </section>
 
                 <section>
-                    <h3>Quantitative comparison of assembled 16S rRNA</h3><br>
+                    <h3>Quantitative comparison of<br> assembled 16S rRNA sequences</h3>
                     <table>
                         <thead>
                             <tr>
-                                <th align="center">JGI custom pipeline</td>
-                                <th align="center">MetaSPAdes</td>
+                                <th align="center">Assembled by JGI custom pipeline</td>
+                                <th align="center">Assembled by MetaSPAdes</td>
                             </tr>
                         </thead>
                         <tbody>                            
@@ -205,7 +206,7 @@
                         </tbody>
                     </table>
                     <br>
-                    <small>*1/5 missed 16S rRNA sequences have length less than 100 bp. This may happen due to complex graph structures or simply misassemblies.</small>
+                    <small>*1/5 missed 16S rRNA sequences have length less than 100 bp. <br>This may happen due to complex graph structures or simply misassemblies.</small>
                 </section>
 
                 <section>
