--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </section>
 
                     <section>
-	                    <h3>Assembly of 16S rRNA genes on isolates</h3>
+	                    <h3>Assembly of 16S rRNA genes on isolates</h3><br>
 	                    <table>
 	                        <thead>
 	                            <tr>
@@ -105,9 +105,9 @@
 	                        </tbody>
 	                    </table>
 	                    <br>    
-	                    <p>
+	                    <small>
 	                        *This number depends on available sequencing information (mate-pair, PacBio reads, etc.)   
-	                    </p>            
+	                    </small>            
                 	</section>
 
                     <section>
@@ -170,11 +170,11 @@
                 </section>
 
                 <section>
-                    <h3>SPAdes 16S rRNA on isolates</h3>
+                    <h3>Detecting long contigs on isolates datasets</h3><br>
                     <table>
                         <thead>
                             <tr>
-                                <th>Organism</th>
+                                <th>Isolated organism</th>
                                 <th>Long contigs* found</th>
                             </tr>
                         </thead>
@@ -190,7 +190,7 @@
                 </section>
 
                 <section>
-                    <h3>Quantitative comparison of<br> assembled 16S rRNA sequences</h3>
+                    <h3>Quantitative comparison of<br> assembled 16S rRNA sequences</h3><br>
                     <table>
                         <thead>
                             <tr>
