--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <section>
                         <h3>Idea</h3>
-                        <p>When 16S rRNA in a contig then one can easily <i>detect</i> it using the following tools:</p>
+                        <p>When 16S rRNA is in a contig then one can easily <i>detect</i> it using the following tools:</p>
                         <ul id="fragments">
                             <li class="fragment">Barrnap (based on <i>NHMMER</i>) makes use of the primary structure conservation;</li>
                             <li class="fragment">Infernal (based on <i>Covariance Models</i>) takes into account both primary and secondary structures.</li>
