--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 	</section>
 
                     <section>
-                        <h3>Local similarity of 16S rRNA genes</h3>
+                        <h3>Issue: local similarity of 16S rRNA genes</h3>
                         <figure>
 	                        <img height="500" data-src="img/msa_by_evol_distance.png"</img>
 	                        <figcaption><small>Multiple alignments were built for 16S rRNA sequences for organisms from the same order(1-3), class (4-11), phylum (12)</small></figcaption>
@@ -125,9 +125,9 @@
 
                     <section>
                         <h3>Ideas about how to improve de novo assembly</h3>
-                        <br><ul>
-                            <li>Use information about both 16S rRNA primary and secondary structures (Reago);</li>
-                            <li>Use existing DBs of RNA families (Rfam, Greengenes) to add an information to assembly graph.</li>
+                        <br><ul id="fragments">
+                            <li class="fragment">Use information about both 16S rRNA primary and secondary structures (existing tool: Reago);</li>
+                            <li class="fragment">Use databases (Rfam, Greengenes) of known RNA families to preliminarily add useful information to assembly graph and further take it into account during main assembly steps.</li>
                         </ul>
                     </section>
 
