--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
 
                     <section>
                         <h3>Ideas about how to improve de novo assembly</h3>
-                        <br><ul id="fragments">
-                            <li class="fragment">Use information about both 16S rRNA primary and secondary structures (existing tool: Reago);</li>
-                            <li class="fragment">Use databases (Rfam, Greengenes) of known RNA families to preliminarily add useful information to assembly graph and further take it into account during main assembly steps.</li>
+                        <br>
+                        <ul id="fragments">
+	                        <li class="fragment">Use information about both 16S rRNA primary and secondary structures (existing tool: Reago);</li>
+	                        <li class="fragment">Use databases (Rfam, Greengenes) of known RNA families to add an information to the assembly graph.</li>
                         </ul>
                     </section>
 
