--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                 </section>
 
                 <section>
-                    <h2>THANK YOU!<h2>
-                    <p><small><small>Hofstadter's Law: It always takes longer than you expect, even when you take into account Hofstadter's Law.</small></small></p>
+                    <h2>THANK YOU! QUESTIONS?<h2>
+                    <p><small><small> Hofstadter's Law: It always takes longer than you expect, even when you take into account Hofstadter's Law.</small></small></p>
                 </section>
 			</div>
 		</div>
